<resources>
    <string name="app_name">Menu_Restaurante</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu Restaurante</string>
    <string name="nav_header_subtitle">menu.restaurante@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuracion</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Promociones</string>
    <string name="menu_slideshow">Pedidos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="txt_email">Email</string>
    <string name="txt_contraseña">Contraseña</string>
    <string name="btn_iniciarsaecion">Iniciar Sesion</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="txt_vacios"></string>

    <string name="facebook_app_id">706426589911583</string>
    <string name="fb_login_protocol_scheme">fb706426589911583</string>
    <string name="todo">TODO</string>
    <string name="Stringnombreplatillo">Platillo</string>
    <string name="Stringprecioplatillo">Precio</string>
    <string name="StringcarritoTitulo">Carrito Pedido</string>
    <string name="StringGenerarCompra">Generar Pedido</string>
    <string name="StringGenerarTotal">Total: $0</string>
    <string name="btn_agg_carrito">Añadir al carrito</string>
</resources>