<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginMain">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="218dp"
        android:layout_height="0dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono_restaurnate" />

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="335dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/btn_rounded_registrarse"
        android:onClick="btn_Registrarse"
        android:text="@string/btn_registrarse"
        app:layout_constraintBottom_toTopOf="@+id/image_btn_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_iniciar_sesion" />

    <ImageButton
        android:id="@+id/image_btn_google"
        android:layout_width="61dp"
        android:layout_height="66dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/btn_rounded_social"
        android:onClick="btn_google_sesion2"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_btn_facebook"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrarse"
        app:srcCompat="@drawable/icono_google" />

    <EditText
        android:id="@+id/edit_text_contraseña"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:backgroundTint="@android:color/holo_green_dark"
        android:ems="10"
        android:hint="@string/txt_contraseña"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:text="@string/txt_vacios"
        app:layout_constraintBottom_toTopOf="@+id/btn_iniciar_sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

    <ImageButton
        android:id="@+id/image_btn_facebook"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="147dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/btn_rounded_social"
        app:layout_constraintBottom_toBottomOf="@+id/image_btn_google"
        app:layout_constraintEnd_toStartOf="@+id/image_btn_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_btn_google"
        app:srcCompat="@drawable/icono_facebook" />

    <Button
        android:id="@+id/btn_iniciar_sesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_rounded"
        android:onClick="btn_iniciarSesion"
        android:text="@string/btn_iniciarsaecion"
        app:layout_constraintBottom_toTopOf="@+id/btn_registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_contraseña" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="49dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/image_btn_facebook"
        app:layout_constraintTop_toBottomOf="@+id/image_btn_google" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:text="@string/txt_vacios"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>